--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     }
 
     try {
-        const response = await fetch('https://clg-web-backend.vercel.app/api/auth/register', {
+        const response = await fetch('/api/auth/register', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
